---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2024-10-28

  Info:
    - Formerly known as Teleport To Train Station
    - This version supports Factorio 2.x
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2024-10-28

  Info:
    - Formerly known as Teleport To Train Station
    - Plugin renamed to Beam To Train Station so that can be used with Space Exploration mod pack
    - Versioning reset to 1.0.0
  Major Features:
    - Supports SE planets
    - Train station list only local to planet where the player is located
    - Supports trains stations with same name, when clicking the button to teleport it will cycle through them